--- a/src/lib/mirador.css
+++ b/src/lib/mirador.css
@@ -1,4 +1,6 @@
 
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,700&display=swap');
+
 #viewer.mirador-container { position:fixed;width:100%;height:100%;top:0;left:0;z-index:1000; }
 #collection-tree > ul > li[role=treeitem]:nth-child(-n+2) { display:none; }
 .jstree-default .jstree-anchor {  line-height: 42px; height: 42px;  font-size: 20px; }
@@ -75,10 +77,19 @@
 
 .mirador-container .mirador-main-menu-bar { display:none; }
 .mirador-container .mirador-viewer { top:0; }
-.mirador-container .content-container { margin-top:60px;}
-.mirador-container .manifest-info { height:60px; display: flex; align-items: center; background: white; justify-content: flex-end;}
+.mirador-container .content-container { margin-top:80px;}
 .mirador-container .window-manifest-navigation { display:none;}
+.mirador-container .manifest-info { height:80px; display: flex; align-items: center; background: white; justify-content: center;}
 
+.manifest-info .nav-bar-top { height:80px; width:1225px; display:flex;align-items: center; justify-content: space-between; font-family:"Noto Sans";}
+
+.manifest-info .nav-bar-top div { display:flex; align-items:center; }
+.manifest-info .nav-bar-top div > a, { display:inline-block;  }
+.manifest-info .nav-bar-top div #bdrc { font-size: 24px; font-weight:500; text-shadow: 0 1px 0 #111312; color:#111312;}
+.manifest-info .nav-bar-top div #bdrc::before { content:' ';display:inline-block;width:77px; height:55px; background:url(/icons-2a.png) 0 0; margin-right:16px; vertical-align: middle; }
+.manifest-info .nav-bar-top div #buda { content:' ';display:inline-block;width:41px; height:52px; background:url(/icons-2a.png) -187px -1px; margin-left:32px; }
+
+.manifest-info .nav-bar-top #breadcrumbs { display:none; }
 
 .mirador-container .workspace-container {
     margin:0;
@@ -173,7 +184,7 @@
     content:' ';
     width:2px;
     height:100%;
-    background-color:rgba(255,255,255,0.5);
+    background-color:rgba(255,255,255,0.25);
     top:0;
     left:4px;
     display:block;
