--- a/src/components/App.css
+++ b/src/components/App.css
@@ -164,11 +164,12 @@ h4 { margin-top:0px;margin-bottom:0px;font-size:24px; }
 .resource .title h2 { font-family: "Noto Sans", "Roboto", "Helvetica", "Arial", sans-serif; position:relative;margin:0;padding:20px 10px 10px 10px ;}
 .resource .title h2 .T { position:absolute;font-size:12px;text-transform:uppercase;top:8px;opacity:0.65;font-weight:100;}
 .resource .title h2.on { background-color:#f5f5f5; }
+/* .resource .title h2:not(.on) + h2:not(.on) { background-color:#fafafa; } */
 
 .resource { width:100% ; padding:70px 100px; text-align:left; box-sizing: border-box;}
 .resource .data { text-align:left ; background-color:#f5f5f5; padding:20px;}
 .resource .data + .data { padding-top:1px;}
-.resource .data > div { display:flex;align-items:baseline;flex-wrap:wrap;box-sizing: border-box;width:100%;position:relative;}
+.resource .data > div:not(.firstImage) { display:flex;align-items:baseline;flex-wrap:wrap;box-sizing: border-box;width:100%;position:relative;}
 .resource .data > div.parent { flex-wrap:wrap; }
 .resource .data > div.parent > h3 { flex-shrink:0 }
 .resource h3,.resource h4 { display:inline-block; margin-bottom:0px; font-size:14px; font-weight:normal; margin-right:5px; line-height:21px;}
@@ -736,7 +737,7 @@ svg.hide { opacity:0;pointer-events:none; }
 
 /* .title + .data .browse { margin-bottom:15px;} */
 
-.title + .data .browse a { font-size:14px; text-transform:capitalize; border:none !important;}
+.title ~ .data .browse a { font-size:14px; text-transform:capitalize; border:none !important;}
 
 .uvLoader { z-index:0 !important;}
 
