--- a/src/components/App.css
+++ b/src/components/App.css
@@ -164,8 +164,10 @@ h4 { margin-top:0px;margin-bottom:0px;font-size:24px; }
 .resource .title h2 { font-family: "Noto Sans", "Roboto", "Helvetica", "Arial", sans-serif; position:relative;margin:0;padding:20px 10px 10px 10px ;}
 .resource .title h2 .T { position:absolute;font-size:12px;text-transform:uppercase;top:8px;opacity:0.65;font-weight:100;}
 .resource .title h2.on { background-color:#f5f5f5; }
-.resource .title h2:not(.on) { max-width: 30%; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; } 
+.resource .title h2:not(.on) { /*max-width: 30%;*/ text-overflow: ellipsis; white-space: nowrap; overflow: hidden; } 
 /* .resource .title h2:not(.on) + h2:not(.on) { background-color:#fafafa; } */
+
+.resource .title h2 a { color: black; text-decoration: none;}
 
 .resource { width:100% ; padding:70px 100px; text-align:left; box-sizing: border-box;}
 .resource .data { text-align:left ; background-color:#f5f5f5; padding:20px;}
