--- a/src/components/App.css
+++ b/src/components/App.css
@@ -6,7 +6,7 @@
 /* * {background-color:rgba(255,0,128,0.05);}   */
 
 
-body { overflow:auto !important;padding-right:0 !important; font-family:"Roboto", "Helvetica", "Arial", sans-serif; }
+body { overflow:auto !important;padding-right:0 !important; font-family:"Roboto", "Helvetica", "Arial", sans-serif; background-color:#efefef;    }
 
 .resultPage > .loader { position:fixed;display:block; width: 100vw;height: 100vh; left: 0; top: 0; }
 
@@ -18,10 +18,17 @@ body { overflow:auto !important;padding-right:0 !important; font-family:"Roboto"
 .data-checkbox > span > span { width:24px;height:24px;}
 .data-checkbox > span > span:last-child { margin-top:12px; }
 
-#login { position:absolute; top:0;right:0;z-index:1; }
+.nav { width:100%; height:80px; position:fixed;top:0;left:0;background:white; display:flex;align-items: center; justify-content: center;
+   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.125);z-index:1000;
+}
+
+.nav > div { width:1234px; display:flex;justify-content: space-between;align-items:center; }
+/* .nav > div > a > img { height:50px; } */
+
+#login { top:0;right:0;z-index:1; display:inline-block; }
 #login button {color:rgba(0,0,0,0.54); }
 
-#top-left { position:absolute; top:0;left:0; }
+#top-left { position:absolute; top:calc(100% + 10px);right:10px; }
 #top-left button {color:rgba(0,0,0,0.54); }
 
 #pagine { width:100%;display:flex;padding:20px;justify-content: space-between; box-sizing:border-box}
@@ -159,18 +166,45 @@ h4 { margin-top:0px;margin-bottom:0px;font-size:24px; }
 
 [lang$="ewts"] { text-transform:none !important; }
 
+.resource { padding:120px 100px; text-align:left; box-sizing: border-box; background-color:#efefef; width:1434px; margin-left:auto;margin-right:auto;}
 
-.resource .title { display:flex; }
-.resource .title h2 { font-family: "Noto Sans", "Roboto", "Helvetica", "Arial", sans-serif; position:relative;margin:0;padding:20px 10px 10px 10px ;}
-.resource .title h2 .T { position:absolute;font-size:12px;text-transform:uppercase;top:8px;opacity:0.65;font-weight:100;}
-.resource .title h2.on { background-color:#f5f5f5; }
-.resource .title h2:not(.on) { /*max-width: 30%;*/ text-overflow: ellipsis; white-space: nowrap; overflow: hidden; } 
+.resource .title { display:flex; position:relative;}
+
+.resource .title h2:first-child.on { box-shadow:4px 0px 2px -2px rgba(0,0,0,0.125) ; }
+.resource .title h2:first-child:not(.on) { box-shadow:4px 0px 2px -2px rgba(0,0,0,0.125) ; }
+
+.resource .title h2:nth-child(2).on { box-shadow:-4px 0px 2px -2px rgba(0,0,0,0.125) ; }
+.resource .title h2:nth-child(2):not(.on) { box-shadow:-4px 0px 2px -2px rgba(0,0,0,0.125) inset,5px 0px 0px -2px #efefef inset ; }
+
+.resource .title h2:last-of-type:not(:first-child).on { box-shadow:-4px 0px 2px -2px rgba(0,0,0,0.125) ; }
+.resource .title h2:last-of-type:not(.on) { box-shadow:4px 0px 2px -2px rgba(0,0,0,0.125) inset; }
+
+/* .resource .title h2:not(.on) + h2:not(.on) {  box-shadow: 2px 0px 2px #efefef inset, -2px 0px 2px rgba(0,0,0,0.125) inset ; } */
+
+
+.resource .title h2 { position:relative; width:calc(1234px / 3); height:90px;display:flex; justify-content: center;align-items: center;}
+
+.resource .data h2,
+.resource .title h2 { font-family: "Noto Sans", "Roboto", "Helvetica", "Arial", sans-serif; margin:0; }
+
+.resource .data h2 { font-size:28px;}
+
+/* .resource .title h2 .T { position:absolute;font-size:12px;text-transform:uppercase;top:8px;opacity:0.65;font-weight:100;} */
+
+.resource .title h2.on { background-color:#ffffff; }
+.resource .title h2:not(.on) { /*max-width: 30%;*/ text-overflow: ellipsis; white-space: nowrap; overflow: hidden; background-color:#e3e3e3; } 
 /* .resource .title h2:not(.on) + h2:not(.on) { background-color:#fafafa; } */
 
-.resource .title h2 a { color: black; text-decoration: none;}
+.resource .data h2.on .T { display:none; }
 
-.resource { width:100% ; padding:70px 100px; text-align:left; box-sizing: border-box;}
-.resource .data { text-align:left ; background-color:#f5f5f5; padding:20px;}
+.resource .title h2 a { color: black; text-decoration: none; width:100%;height:100%;display:flex;justify-content: center;align-items: center;}
+
+.resource .title h2:not(.on) > a > :not(.T),
+.resource .title h2.on > :not(.T) { display:none; }
+
+.resource .data { text-align:left ; background-color:#ffffff; padding:20px 40px;}
+.resource .title + .data { padding-top:30px; }
+.resource > .data:last-child { padding-bottom:40px; }
 .resource .data + .data { padding-top:1px;}
 .resource .data > div:not(.firstImage) { display:flex;align-items:baseline;flex-wrap:wrap;box-sizing: border-box;width:100%;position:relative;}
 .resource .data > div.parent { flex-wrap:wrap; }
@@ -738,7 +772,7 @@ svg.hide { opacity:0;pointer-events:none; }
 
 .firstImage + .data { margin-top:15px; }
 
-/* .title + .data .browse { margin-bottom:15px;} */
+.title + .data .browse { display:inline-block !important ; width: auto !important; } 
 
 .title ~ .data .browse a { font-size:14px; text-transform:capitalize; border:none !important;}
 
