--- a/src/lib/mirador.css
+++ b/src/lib/mirador.css
@@ -1,5 +1,81 @@
 
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,700&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,700&display=swap'); */
+
+/*
+
+@font-face {
+    font-family: 'Noto Sans';
+    src: url('/fonts/NotoSans-Thin.woff2') format('woff2'),
+        url('/fonts/NotoSans-Thin.woff') format('woff');
+    font-weight: 100;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Noto Sans';
+    src: url('/fonts/NotoSans-ExtraLight.woff2') format('woff2'),
+    url('/fonts/NotoSans-ExtraLight.woff') format('woff');
+    font-weight: 200;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Noto Sans';
+    src: url('/fonts/NotoSans-Light.woff2') format('woff2'),
+        url('/fonts/NotoSans-Light.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Noto Sans';
+    src: url('/fonts/NotoSans-SemiBold.woff2') format('woff2'),
+    url('/fonts/NotoSans-SemiBold.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Noto Sans';
+    src: url('/fonts/NotoSans-ExtraBold.woff2') format('woff2'),
+        url('/fonts/NotoSans-ExtraBold.woff') format('woff');
+    font-weight: 800;
+    font-style: normal;
+}
+
+*/
+
+
+@font-face {
+    font-family: 'Noto Sans';
+    src: url('/fonts/NotoSans-Medium.woff2') format('woff2'),
+        url('/fonts/NotoSans-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Noto Sans';
+    src: url('/fonts/NotoSans-Regular.woff2') format('woff2'),
+        url('/fonts/NotoSans-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Noto Sans';
+    src: url('/fonts/NotoSans-Bold.woff2') format('woff2'),
+        url('/fonts/NotoSans-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Noto Sans';
+    src: url('/fonts/NotoSans-Black.woff2') format('woff2'),
+        url('/fonts/NotoSans-Black.woff') format('woff');
+    font-weight: 900;
+    font-style: normal;
+}
 
 #viewer.mirador-container { position:fixed;width:100%;height:100%;top:0;left:0;z-index:1000; }
 #collection-tree > ul > li[role=treeitem]:nth-child(-n+2) { display:none; }
