--- a/src/components/App.css
+++ b/src/components/App.css
@@ -210,7 +210,7 @@ h4 { margin-top:0px;margin-bottom:0px;font-size:24px; }
 .resource .title h2:nth-child(2):not(.on) { box-shadow:-4px 0px 2px -2px rgba(0,0,0,0.125) inset,5px 0px 0px -2px #efefef inset ; }
 
 .resource .title h2:last-of-type { width:calc(1234px - (1234px / 3) * 2); }
-.resource .title h2:last-of-type:not(:first-child).on { box-shadow:-4px 0px 2px -2px rgba(0,0,0,0.125) ; }
+/* .resource .title h2:last-of-type:not(:first-child).on { box-shadow:-4px 0px 2px -2px rgba(0,0,0,0.125) ; } */
 .resource .title h2:last-of-type:not(.on) { box-shadow:4px 0px 2px -2px rgba(0,0,0,0.125) inset; }
 
 .resource .title h2:first-child.on + h2 { box-shadow:4px 0px 2px -2px rgba(0,0,0,0.125) inset ; }
@@ -223,7 +223,7 @@ h4 { margin-top:0px;margin-bottom:0px;font-size:24px; }
 .resource .data h2,
 .resource .title h2 { font-family: "Noto Sans", "Roboto", "Helvetica", "Arial", sans-serif; margin:0; color:#343434;}
 
-.resource .data h2 { font-size:28px;}
+.resource .data h2 { font-size:34px;}
 
 .resource .title h2 .T { position:relative; }
 
