--- a/src/components/App.css
+++ b/src/components/App.css
@@ -259,18 +259,26 @@ h4 { margin-top:0px;margin-bottom:0px;font-size:24px; }
 .resource .title + .data { padding-top:40px; }
 .resource > .data:last-child { padding-bottom:50px; }
 .resource .data + .data { padding-top:1px;}
-.resource .data > div:not(.firstImage) { display:flex;align-items:baseline;flex-wrap:wrap;box-sizing: border-box;width:100%;position:relative;}
+
+/* .resource .data > div:not(.firstImage) { display:flex;align-items:baseline;flex-wrap:nowrap;box-sizing: border-box;width:100%;position:relative;} */
+.resource .data > div:not(.firstImage):not(.browse) { display:block; position:relative; }
+.resource .data > div:not(.firstImage):not(.browse)::after { content:''; width:78%; height:1px;margin:25px 0 20px 22%;display:block;}
+.resource .data > div:not(.firstImage):not(.browse):not(:last-child)::after { background:rgba(0,0,0,0.25);}
+
+.resource .data > div > h3 { width:22%; }
 .resource .data > div.parent { flex-wrap:wrap; }
 .resource .data > div.parent > h3 { flex-shrink:0 }
-.resource h3,.resource h4 { display:inline-block; margin-bottom:0px; font-size:14px; font-weight:normal; margin-right:5px; line-height:21px;}
+.resource h3,.resource h4 { display:inline-block; margin-bottom:0px; font-size:14px; font-weight:normal; /*margin-right:5px; line-height:30px;*/ }
 .resource h3 span { /*text-decoration: underline;*/ font-weight:600;  text-transform:capitalize; }
 .resource h3 { font-size:14px;margin-top:6px; }
-.resource .sub { width:100%; padding-left:20px;display:flex;flex-wrap:wrap; box-sizing: border-box; position:relative;}
-.resource .sub h4.first { font-size:0.85em;font-style:italic; text-transform:capitalize; flex-shrink:0; line-height:1.6em;}
+.resource .sub { /*width:100%; padding-left:20px;*/ display:inline-flex;flex-wrap:wrap; box-sizing: border-box; position:relative;}
+.resource .sub h4.first { font-size:0.85em; /*font-style:italic;*/ text-transform:capitalize; flex-shrink:0; /*line-height:1.6em;*/}
  .resource .sub .sub h4.first.type,
 .resource .sub h4.first.prop { font-style:normal;font-size:0.8em; line-height:20px }
 
-.resource .subsub { width:100%; padding-left:20px; display: flex;align-items: baseline;flex-wrap:wrap;position:relative; box-sizing: border-box;}
+.resource .sub h4.first + h4 { margin-left:5px;}
+
+.resource .subsub { /*width:100%;*/ padding-left:5px; display: flex;align-items: baseline;flex-wrap:wrap;position:relative; box-sizing: border-box;}
 
 /* .resource .subsub h4 { flex-shrink:0 ; } */
 /* .resource .subsub:first-child:before, */
@@ -291,6 +299,10 @@ h4 { margin-top:0px;margin-bottom:0px;font-size:24px; }
 .resource  .sub .sub .subsub h4.first.prop { font-style:normal;}
 .resource .sub .sub { padding-left:60px;}
 .resource .subsub.full .subsub .subsubsub h4.first.prop { font-style:normal; }
+
+.resource .data > div > .sub { line-height:24px; }
+.resource .data > div > .sub + .sub { width:78%; margin-left:22%; } 
+.resource .data > div > .sub:empty { display:none; }
 
 #etext-scroll > .etextPage:first-child { margin-top:20px; }
 
@@ -355,7 +367,9 @@ h4 { margin-top:0px;margin-bottom:0px;font-size:24px; }
 /* .imageVolumePopup .lang { display:none; } */
 .imageVolumePopup a { color:rgba(229, 74, 53,1); text-decoration: none; pointer-events: none;}
 
-.resource .data h3 a.propref,.resource .data h4 a.propref { color:black; }
+.resource .data h3 a.propref,.resource .data h4 a.propref { color:#343434; font-size:17px; letter-spacing: 0.68px; }
+.resource .data .sub a.propref { font-size:15px; font-weight:700; letter-spacing: 0px;font-style:normal;letter-spacing:0.63px; }
+.resource .data .sub .subsub a.propref { font-weight:400;}
 .resource .data h3 a.propref:hover,.resource .data h4 a.propref:hover { border-bottom:1px solid black;}
 div[role="tooltip"] { margin:30px; max-width:400px;  }
 div[role="tooltip"] > div { font-weight:bold;font-size:16px; }
@@ -494,10 +508,17 @@ a.download:hover { text-decoration:underline; }
 
 .firstImage + br + div > .download { font-size:14px; text-transform: capitalize; } 
 
+.propCollapseHeader { width:78%; display:inline-block;vertical-align:top;padding-top:4px;line-height:24px;}
+
 h3 + h4.multiple,
 h3 + .propCollapseHeader,
 h3 + .sub 
 { margin-top:2px; }
+
+
+.resource .data > div > h3 + h4:not(.multiple) { width:78%; vertical-align:text-top; padding-top:0px; line-height:24px; }
+.resource .data > div > h3 ~ h4.multiple { width:78%; line-height:21px;}
+.resource .data > div > h3 ~ h4.multiple + h4 { margin-left:22%;  }
 
 .resource .data > div .sub .subsub > h4.multiple,
 .resource .data > div .sub > h4.multiple,
@@ -507,7 +528,7 @@ h3 + .sub
 /* .resource .data > div > .sub > .subsub > h4:not(.first),  */
 /* :not(:nth-child(2):last-child), */
 .propCollapse > div > div > h4,
-.propCollapseHeader > h4 { width:100%; padding-left:20px; }
+.propCollapseHeader > h4 { width:100%; padding-left:0px; }
 .resource .data > div .sub .subsub > h4.multiple::after,
 .resource .data > div .sub > h4.multiple::after,
 .resource .data > div > h4::after,
@@ -518,15 +539,18 @@ h3 + .sub
 h3 .expand svg { position:absolute; margin-top:-18px; }*/
 .propCollapse.in-false h4:first-child { margin-top:0;transition:all 200ms ease-in-out; }
 /* .propCollapse.in-true + .expand { margin-bottom:10px; } */
-.propCollapse { width:100%; margin-bottom:20px; }
-.propCollapse.in-true { padding-bottom:10px;margin-bottom:15px; }
-.propCollapse.in-false { height:0; } 
+.propCollapse { width:78%; margin-left:22%;margin-bottom:50px; line-height:24px; }
+
+/* .propCollapse.in-true { padding-bottom:10px; margin-bottom:15px; } */
+
+.propCollapse.in-false { height:0;} 
 /* .propCollapseHeader { width:100%; } */
 
-.expand { margin-bottom:0px; cursor:pointer; margin-left:20px; border-bottom:1px solid transparent; font-size:13px; position:absolute;bottom:0; margin-bottom:3px; }
+.expand { margin-bottom:0px; cursor:pointer; margin-left:22%; border-bottom:1px solid transparent; font-size:13px; position:absolute;bottom:24px; margin-bottom:3px; }
 .expand:hover { border-bottom:1px solid black;  }
-.propCollapse.in-false + .expand { margin-top:0px;transition:all 300ms ease-in-out;} 
-.propCollapse.in-true + .expand { margin-top:-5px; margin-bottom:5px;} 
+/* .propCollapse.in-false + .expand { margin-top:0px;transition:all 300ms ease-in-out;}  */
+/* .propCollapse.in-true + .expand  { margin-top:15px; margin-bottom:-5px; }  */
+
 
 .toggle-expand { position:absolute; margin-top: -2px; cursor:pointer; }
 
@@ -653,7 +677,7 @@ body {overflow-x:hidden; }
 .SidePane > #annoCollec svg.score1 { border-radius:50%; background-color:rgba(17, 173, 17, 0.3);border:1px solid rgba(36, 106, 36, 0.4);}
 
 .SidePane { position:absolute;transition:left 400ms ease-in-out,right 400ms ease-in-out; background:white;height:calc(100vh - 40px); position:fixed;padding:20px;
-   background:rgba(246,246,246,0.935); z-index:100; top:0; }
+   background:rgba(246,246,246,0.935); z-index:1001; top:0; }
 .SidePane.left {  box-shadow:2px 0 2px 0px rgba(0,0,0,0.35); } 
 .visible .SidePane.left { overflow-y:auto;}
 .SidePane.right { right:-500px; box-shadow:-2px 0 2px 0px rgba(0,0,0,0.35);}
@@ -828,6 +852,8 @@ svg.hide { opacity:0;pointer-events:none; }
 .title + .data .browse { display:inline-block !important ; width: auto !important; } 
 
 .title ~ .data .browse a { font-size:14px; text-transform:capitalize; border:none !important;}
+
+/* .resource .title + .data + .data .browse { display:none; } */
 
 .uvLoader { z-index:0 !important;}
 
