--- a/src/components/App.css
+++ b/src/components/App.css
@@ -16,6 +16,14 @@
 
 @font-face {
    font-family: 'Noto Sans';
+   src: url('/fonts/NotoSans-SemiBold.woff2') format('woff2'),
+   url('/fonts/NotoSans-SemiBold.woff') format('woff');
+   font-weight: 600;
+   font-style: normal;
+}
+
+@font-face {
+   font-family: 'Noto Sans';
    src: url('/fonts/NotoSans-Regular.woff2') format('woff2'),
        url('/fonts/NotoSans-Regular.woff') format('woff');
    font-weight: normal;
@@ -61,8 +69,15 @@ body { overflow:auto !important;padding-right:0 !important; font-family:"Roboto"
 #login { top:0;right:0;z-index:1; display:inline-block; }
 #login button {color:rgba(0,0,0,0.54); }
 
-#top-left { position:absolute; top:calc(100% + 40px);right:40px; }
+/* #top-left { position:absolute; top:calc(100% + 40px);right:40px; } */
+#top-left { position:relative; background:#efefef; display:flex;align-items: center; justify-content:space-between; margin-bottom:10px;height:85px;
+   padding:23px 31px; box-sizing: border-box;}
 #top-left button {color:rgba(0,0,0,0.54); }
+#top-left #permalink { color:white; background-color: #d73449; border-radius:5px;display:flex;align-items: center;justify-content: center; height:40px;
+   padding: 0 15px; border:none !important; font-weight:600; font-size:13px;}
+#top-left #permalink img { display:inline-block; margin-right:10px; }
+
+.resource .title + .data + .data .browse { display:none; }
 
 #pagine { width:100%;display:flex;padding:20px;justify-content: space-between; box-sizing:border-box}
 #pagine svg {height:36px;width:36px; cursor:pointer;}
@@ -200,8 +215,30 @@ h4 { margin-top:0px;margin-bottom:0px;font-size:24px; }
 
 [lang$="ewts"] { text-transform:none !important; }
 
+
+h2:not(:hover) .lang,
+h4:not(:hover) > .lang
+{ display:none; }
+
 .resource { padding:120px 0px; text-align:left; box-sizing: border-box; background-color:#efefef; width:1234px; margin-left:auto;margin-right:auto;
-   max-width:97%;}
+   max-width:97%; display:flex;}
+
+.resource > .index { min-width:25%; }
+.resource > :not(.index) { min-width:75%; }
+
+.resource > :not(.index) > .title h2 .T { margin-bottom:15px; }
+.resource > :not(.index) > .title h2 .T::before { display:none; }
+.resource  > :not(.index) > .title h2 .RID { left:0; }
+
+.resource .data .header { width:100%; height:245px; background:#fce08d; display:flex;align-items:center;justify-content: center; margin-bottom:20px; }
+.resource .data .header::before { content:' '; width:130px; height:130px; background:white;border-radius:50%; 
+   background-size:70px auto;background-repeat:no-repeat; background-position: center;}
+
+.resource.work .data .header::before { background-image:url("/icons/work_50g.png");  }
+.resource.instance .data .header::before { background-image:url("/icons/instance_50g.png"); }
+.resource.images .data .header::before { background-image:url("/icons/images_50g.png"); }
+
+.resource .title h2:first-of-type:last-of-type { display:none; }
 
 .resource .title { display:flex; position:relative; }
 
@@ -211,7 +248,7 @@ h4 { margin-top:0px;margin-bottom:0px;font-size:24px; }
 .resource .title h2:nth-child(2).on { box-shadow:-4px 0px 2px -2px rgba(0,0,0,0.125) ; }
 .resource .title h2:nth-child(2):not(.on) { box-shadow:-4px 0px 2px -2px rgba(0,0,0,0.125) inset,5px 0px 0px -2px #efefef inset ; }
 
-.resource .title h2:last-of-type { width:calc(1234px - (1234px / 3) * 2); }
+.resource .title h2:last-of-type { width:calc(100% - (100% / 3) * 2); }
 /* .resource .title h2:last-of-type:not(:first-child).on { box-shadow:-4px 0px 2px -2px rgba(0,0,0,0.125) ; } */
 .resource .title h2:last-of-type:not(.on) { box-shadow:4px 0px 2px -2px rgba(0,0,0,0.125) inset; }
 
@@ -219,7 +256,7 @@ h4 { margin-top:0px;margin-bottom:0px;font-size:24px; }
 .resource .title h2:first-child.on + h2 + h2 { box-shadow:5px 0px 0px -2px #efefef inset ;}
 /* .resource .title h2:not(.on) + h2:not(.on) {  box-shadow: 2px 0px 2px #efefef inset, -2px 0px 2px rgba(0,0,0,0.125) inset ; } */
 
-.resource .title h2 { position:relative; width:calc(1234px / 3); height:90px;display:flex; justify-content: center;align-items: center;
+.resource .title h2 { position:relative; width:calc(100% / 3); height:90px;display:flex; justify-content: center;align-items: center;
    font-weight:900; font-size:24px; }
 
 .resource .data h2,
@@ -265,24 +302,25 @@ h4 { margin-top:0px;margin-bottom:0px;font-size:24px; }
 .resource .data + .data { padding-top:1px;}
 
 /* .resource .data > div:not(.firstImage) { display:flex;align-items:baseline;flex-wrap:nowrap;box-sizing: border-box;width:100%;position:relative;} */
-.resource .data > div:not(.firstImage):not(.browse) { display:block; position:relative; }
-.resource .data > div:not(.firstImage):not(.browse)::after { content:''; width:78%; height:1px;margin:25px 0 20px 22%;display:block;}
-.resource .data > div:not(.firstImage):not(.browse):not(:last-child)::after { background:rgba(0,0,0,0.25);}
+.resource .data > div:not(.firstImage):not(.browse):not(.header) { display:block; position:relative; }
+.resource .data > div:not(.firstImage):not(.browse):not(.header):not(#top-left)::after { content:''; width:calc(100% - 190px);; height:1px;margin:25px 0 20px 190px;display:block;}
+.resource .data > div:not(.firstImage):not(.browse):not(.header):not(:last-child)::after { background:rgba(0,0,0,0.25);}
 
-.resource .data > div > h3 { width:calc(22% - 15px); padding-right:15px; /*line-height:24px; */ vertical-align: top; }
+.resource .data > div > h3 { width:calc(190px - 15px); padding-right:15px; /*line-height:24px; */ vertical-align: top; }
 .resource .data > div.parent { flex-wrap:wrap; }
 .resource .data > div.parent > h3 { flex-shrink:0 }
 .resource h3,.resource h4 { display:inline-block; margin-bottom:0px; font-size:14px; font-weight:normal; /*margin-right:5px; line-height:30px;*/ }
 .resource h3 span { /*text-decoration: underline;*/ font-weight:600;  text-transform:capitalize; }
 .resource h3 { font-size:14px;margin-top:-1px; }
-.resource .sub { width:78%; /*padding-left:20px;*/ display:inline-flex;flex-wrap:wrap; box-sizing: border-box; position:relative;}
+.resource .sub { width:calc(100% - 190px); /*padding-left:20px;*/ display:inline-flex;flex-wrap:wrap; box-sizing: border-box; position:relative;}
 .resource .sub h4.first { /*font-size:0.85em; font-style:italic;*/ text-transform:capitalize; flex-shrink:0; /*line-height:1.6em;*/  margin-right:5px;}
  .resource .sub .sub h4.first.type,
 .resource .sub h4.first.prop { font-style:normal;/*font-size:0.8em; line-height:20px;*/ }
 
 /* .resource .sub h4.first + h4:not(.multiple) { margin-left:5px;} */
 
-.resource .subsub { /*width:100%; padding-left:5px; display: flex;*/align-items: baseline;flex-wrap:wrap;position:relative; box-sizing: border-box;}
+.resource .subsub { /*width:100%; padding-left:5px; display: flex;*/align-items: baseline;flex-wrap:wrap;position:relative; box-sizing: border-box;
+   padding-right:5px;}
 
 /* .resource .subsub h4 { flex-shrink:0 ; } */
 /* .resource .subsub:first-child:before, */
@@ -305,7 +343,7 @@ h4 { margin-top:0px;margin-bottom:0px;font-size:24px; }
 .resource .subsub.full .subsub .subsubsub h4.first.prop { font-style:normal; }
 
 .resource .data > div > .sub { line-height:28px; }
-.resource .data > div > .sub + .sub { width:78%; margin-left:22%; } 
+.resource .data > div > .sub + .sub { width:calc(100% - 190px); margin-left:190px; } 
 .resource .data > div > .sub:empty { display:none; }
 
 .resource .data > [data-prop="bdo:workIsAbout"] h4.multiple { width:auto;margin-left:0;}
@@ -320,7 +358,7 @@ h4 { margin-top:0px;margin-bottom:0px;font-size:24px; }
 .resource .data > [data-prop="bdo:lineageHolder"] h4[data-prop^="bdo:lineageHolder"] 
 { display:none; }
 
-.resource .data > [data-prop="bdo:creator"] h4[data-prop="bdo:role"] + h4::after { content:':';padding-right:5px;}
+.resource .data > [data-prop="bdo:creator"] h4[data-prop="bdo:role"] + h4::after { content:':'; /*padding-right:5px;*/ }
 
 .resource .data > [data-prop="bdo:note"] > .sub > h4.first,
 .resource .data > [data-prop="bdo:lineageHolder"] .sub .subsub h4[data-prop^="bdo:lineageWho"] a,
@@ -402,7 +440,7 @@ h4 { margin-top:0px;margin-bottom:0px;font-size:24px; }
 /* .imageVolumePopup .lang { display:none; } */
 .imageVolumePopup a { color:rgba(229, 74, 53,1); text-decoration: none; pointer-events: none;}
 
-.resource .data h3 a.propref,.resource .data h4 a.propref { color:#343434; font-size:17px; letter-spacing: 0.68px;line-height:24px;word-break: break-all; }
+.resource .data h3 a.propref,.resource .data h4 a.propref { color:#343434; font-size:17px; letter-spacing: 0.68px;line-height:24px; /*word-break: break-all;*/ }
 .resource .data .sub a.propref { font-size:15px; font-weight:700; letter-spacing: 0px;font-style:normal;letter-spacing:0.63px; }
 .resource .data .sub .subsub a.propref { font-weight:400;letter-spacing:0.35px;}
 .resource .data h3 a.propref:hover,.resource .data h4 a.propref:hover { border-bottom:1px solid black;}
@@ -543,17 +581,18 @@ a.download:hover { text-decoration:underline; }
 
 .firstImage + br + div > .download { font-size:14px; text-transform: capitalize; } 
 
-.propCollapseHeader { width:78%; display:inline-block;vertical-align:top;padding-top:0px;line-height:24px;}
+.propCollapseHeader { width:calc(100% - 190px); display:inline-block;vertical-align:top;padding-top:0px;line-height:24px;}
 
 h3 + h4.multiple,
 h3 + .propCollapseHeader,
 h3 + .sub 
 { margin-top:0px; }
 
+h4.multiple { margin-bottom:6px; }
 
-.resource .data > div > h3 + h4:not(.multiple) { width:78%; vertical-align:top; padding-top:0px; line-height:24px; }
-.resource .data > div > h3 ~ h4.multiple { width:78%; line-height:24px; vertical-align:top;}
-.resource .data > div > h3 ~ h4.multiple + h4 { margin-left:22%;  }
+.resource .data > div > h3 + h4:not(.multiple) { width:calc(100% - 190px);; vertical-align:top; padding-top:0px; line-height:24px; }
+.resource .data > div > h3 ~ h4.multiple { width:calc(100% - 190px);; line-height:24px; vertical-align:top; }
+.resource .data > div > h3 ~ h4.multiple + h4 { margin-left:190px;  }
 /* .resource .data > div > h3 + h4.multiple { margin-top:0px;} */
 
 .resource .data > div .sub .subsub > h4.multiple,
@@ -575,14 +614,14 @@ h3 + .sub
 h3 .expand svg { position:absolute; margin-top:-18px; }*/
 .propCollapse.in-false h4:first-child { margin-top:0;transition:all 200ms ease-in-out; }
 /* .propCollapse.in-true + .expand { margin-bottom:10px; } */
-.propCollapse { width:78%; margin-left:22%;margin-bottom:50px; line-height:24px; }
+.propCollapse { width:calc(100% - 190px);; margin-left:190px;margin-bottom:50px; line-height:24px; }
 
 /* .propCollapse.in-true { padding-bottom:10px; margin-bottom:15px; } */
 
 .propCollapse.in-false { height:0;} 
 /* .propCollapseHeader { width:100%; } */
 
-.expand { margin-bottom:0px; cursor:pointer; margin-left:22%; border-bottom:1px solid transparent; font-size:13px; position:absolute;bottom:24px; margin-bottom:3px; }
+.expand { margin-bottom:0px; cursor:pointer; margin-left:190px; border-bottom:1px solid transparent; font-size:13px; position:absolute;bottom:24px; margin-bottom:3px; }
 .expand:hover { border-bottom:1px solid black;  }
 /* .propCollapse.in-false + .expand { margin-top:0px;transition:all 300ms ease-in-out;}  */
 /* .propCollapse.in-true + .expand  { margin-top:15px; margin-bottom:-5px; }  */
@@ -875,8 +914,8 @@ svg.hide { opacity:0;pointer-events:none; }
 }
 .uv.hidden,.uv.hide { display:none !important;}
 
-.firstImage { box-shadow: 0 0 10px black;display:inline-block;padding:5px;background:rgba(0,0,0,1.0);position:relative; min-width:360px;min-height:100px;text-align:center; 
-   margin-top:5px; }
+.firstImage { /*box-shadow: 0 0 10px black;display:inline-block;*/padding:5px;background:rgba(0,0,0,1.0);position:relative; min-width:360px;min-height:100px;text-align:center; 
+   margin-top:5px; width:100%;height:500px; display: flex; justify-content: center; align-items: center;}
 .firstImage img {max-width:100%; position:relative;z-index:1; max-height:444px;}
 .firstImage.loaded { font-size:0;  }
 .firstImage.loaded #title { position:absolute;font-size:17px;left:20px;bottom:20px; z-index:2; }
